@@ -2731,7 +2731,7 @@ struct Damage battle_calc_magic_attack(struct block_list *src,struct block_list 
 				break;*/
 			case AB_RENOVATIO:
 				//Damage calculation from iRO wiki. [Jobbie]
-				ad.damage = (int)((15 * sd->status.base_level) + (1.5 * sd->status.int_));
+				ad.damage = (int)((15 * status_get_lv(src)) + (1.5 * sstatus->int_));
 				break;
 			default:
 			{
@@ -2834,10 +2834,10 @@ struct Damage battle_calc_magic_attack(struct block_list *src,struct block_list 
 						skillratio += 100 +100*skill_lv +100*(skill_lv/2);
 						break;
 					case AB_JUDEX:
-						skillratio = ((skill_lv == 5) ? 400 : (280 + 20 * skill_lv)) * status_get_lv(src) / 100;
+						skillratio += -100 + ((skill_lv == 5) ? 400 : (280 + 20 * skill_lv)) * status_get_lv(src) / 100;
 						break;
 					case AB_ADORAMUS:
-						skillratio = (500 + 100 * skill_lv) * status_get_lv(src) / 100;
+						skillratio += -100 + (500 + 100 * skill_lv) * status_get_lv(src) / 100;
 						break;
 					case AB_DUPLELIGHT_MAGIC:
 						skillratio += 100 + 20 * skill_lv;
@@ -2851,7 +2851,7 @@ struct Damage battle_calc_magic_attack(struct block_list *src,struct block_list 
 						}
 						break;
 					case WL_FROSTMISTY:
-						skillratio = (200 + 100 * skill_lv) * (status_get_lv(src) / 100);
+						skillratio += -100 + (200 + 100 * skill_lv) * (status_get_lv(src) / 100);
 						break;
 					case WL_JACKFROST:
 						skillratio += 900 + 300 * skill_lv;
@@ -2912,33 +2912,32 @@ struct Damage battle_calc_magic_attack(struct block_list *src,struct block_list 
 						skillratio += 50 * skill_lv;
 						break;
 					case WM_REVERBERATION_MAGIC:
-						if( sd )
-							skillratio += 100 * pc_checkskill(sd, WM_REVERBERATION);
+						skillratio += 100 * (sd ? pc_checkskill(sd, WM_REVERBERATION) : 1);
 						break;
 					case SO_FIREWALK:
 					case SO_ELECTRICWALK:
-						skillratio = 300 * ( status_get_lv(src) * 3 / 100 );
+						skillratio += -100 + 300 * ( status_get_lv(src) * 3 / 100 );
 						break;
 					case SO_EARTHGRAVE:
-						skillratio = 200 * ( sd ? pc_checkskill(sd, SA_SEISMICWEAPON) : 1 ) 
+						skillratio += -100 + 200 * ( sd ? pc_checkskill(sd, SA_SEISMICWEAPON) : 1 ) 
 									+ ( sstatus->int_ * skill_lv * status_get_lv(src) / 100 );
 						break;
 					case SO_DIAMONDDUST:
-						skillratio = 200 * ( sd ? pc_checkskill(sd, SA_FROSTWEAPON) : 1 )
+						skillratio += -100 + 200 * ( sd ? pc_checkskill(sd, SA_FROSTWEAPON) : 1 )
 									+ ( sstatus->int_ * skill_lv * status_get_lv(src) / 100 );
 						break;
 					case SO_POISON_BUSTER:	// Need official formula. [LimitLine]
 						skillratio += 300 + 100 * skill_lv;
 						break;
 					case SO_PSYCHIC_WAVE:
-						skillratio = skill_lv * 70 + ( sstatus->int_ * 3 * status_get_lv(src) / 100 );
+						skillratio += -100 + skill_lv * 70 + ( sstatus->int_ * 3 * status_get_lv(src) / 100 );
 						break;
 					case SO_VARETYR_SPEAR: //Assumed Formula.
-						skillratio = 200 * ( sd ? pc_checkskill(sd, SA_LIGHTNINGLOADER) : 1 )
+						skillratio += -100 + 200 * ( sd ? pc_checkskill(sd, SA_LIGHTNINGLOADER) : 1 )
 									+ ( sstatus->int_ * skill_lv * status_get_lv(src) / 100 );
 						break;
 					case SO_CLOUD_KILL:
-						skillratio = skill_lv * 40 * status_get_lv(src) / 100;
+						skillratio += -100 + skill_lv * 40 * status_get_lv(src) / 100;
 						break;
 					case GN_SPORE_EXPLOSION: // Need official value. [LimitLine]
 						skillratio += 400 + 100 * skill_lv;
